--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,20 @@ body{
 
 }
 
+#listContainer {
+	margin: 0 auto;
+}
+
 /* Remove margins and padding from the list */
 ul{
-	margin-left: 25%;
-	margin-right: 25%;
+	margin-left: 10%;
+	margin-right: 10%;
 	padding: 0;
 }
 
 /* style the list items */
 
-ul li{
+ul li {
 	cursor: pointer;
 	position: relative;
 	padding: 12px 8px 12px 40px;
@@ -28,12 +32,27 @@ ul li{
 	transition: 0.2s;
 	list-style: none;
 	min-width: 250px;
+	border-radius: 5px;
+	margin-bottom: 3px;
+	width: 100%;
 
 	 /* make the list items unselectable */
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+#starter {
+	color: #555;
+	font-size: 80%;
+	font-style: italic;
+}
+
+#checkExample {
+	color: #000;
+	font-size: 80%;
+	font-style: italic;
 }
 
 /* set the odd items to a different color */
@@ -75,6 +94,15 @@ ul li.checked::before{
 	top: 0;
 	padding: 12px 16px 12px 16px;
 	height: 100%;
+	background: #d9d9d9;
+    color: #555;
+    float: left;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.2s;
+    border: none;
+    border-radius: 5px;
 
 }
 
@@ -84,10 +112,11 @@ ul li.checked::before{
 }
 
 header{
-	background-color: #f44336;
+	background-color: #36e6f4;
 	padding: 30px 40px;
 	color: white;
 	text-align: center;
+	border-radius: 5px;
 }
 
 /* Clear floats after the header */
@@ -100,10 +129,13 @@ header:after{
 /* Style the input */
 input{
 	border:none;
-	width: 75%;
+	width: 50%;
 	padding: 10px;
-	float: left;
+	/*float: left; */
 	font-size: 16px;
+	margin-right: -10px;
+	outline: none;
+	border-radius: 5px;
 }
 
 /* Style the add button */
@@ -113,12 +145,14 @@ input{
 	height: 100%;
 	background: #d9d9d9;
     color: #555;
-    float: left;
+   
     text-align: center;
     font-size: 16px;
     cursor: pointer;
     transition: 0.2s;
     border: none;
+    outline: none;
+    border-radius: 5px;
 }
 
 #add:hover{
